--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,3 +13,7 @@
   title: What's in your cart?
   abstract: What you can learn about your habits by looking at your grocery data
   author: Lars Hupel
+- date: 2022-04-01
+  link: "https://ttto.cafe/midaregami"
+  title: Midaregami
+  abstract: A translation of the first five poems of the Midaregami, a historic (and extremely good) compilation of poetry. Three of them have never been seen in English before!
