--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -17,3 +17,8 @@
   link: "https://ttto.cafe/midaregami"
   title: Midaregami
   abstract: A translation of the first five poems of the Midaregami, a historic (and extremely good) compilation of poetry. Three of them have never been seen in English before!
+- date: 2022-04-01
+  link: "https://benbrubaker.com/on-error/"
+  title: On Error
+  abstract: What science, art, and humor have to say about what error is and how it should make you feel
+  author: Ben Brubaker
