--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -22,3 +22,8 @@
   title: On Error
   abstract: What science, art, and humor have to say about what error is and how it should make you feel
   author: Ben Brubaker
+- date: 2022-04-01
+  link: "https://medium.com/@predrag.gruevski/to-ace-exams-get-better-at-the-easy-questions-2b879c4b413b"
+  title: To ace exams, practice the easy questions
+  abstract: Common advice is for common situations. Acing an exam isn't common, so common advice won't get you there. Here's a technique that can
+  author: Predrag Gruevski
