--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -27,3 +27,8 @@
   title: To ace exams, practice the easy questions
   abstract: Common advice is for common situations. Acing an exam isn't common, so common advice won't get you there. Here's a technique that can
   author: Predrag Gruevski
+- date: 2022-04-01
+  link: "https://jeremykun.com/2022/04/01/cocktails"
+  title: Cocktails
+  abstract: Cocktails as craftsmanship, and an ode to the variety of ingredients and techniques that can turn any flavor into a beverage
+  author: Jeremy Kun
