--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -32,3 +32,9 @@
   title: Cocktails
   abstract: Cocktails as craftsmanship, and an ode to the variety of ingredients and techniques that can turn any flavor into a beverage
   author: Jeremy Kun
+- date: 2022-04-01
+  link: "https://hillelwayne.com/post/microscopy/"
+  title: I ❤️ Microscopes
+  abstract: Seeing the world through a new (40x) lens
+  author: Hillel Wayne
+
