adds Felienne's post

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -37,4 +37,8 @@
   title: I ❤️ Microscopes
   abstract: Seeing the world through a new (40x) lens
   author: Hillel Wayne
-
+- date: 2022-04-01
+  link: "https://www.felienne.com/archives/6639"
+  title: Marathon Food
+  abstract: What to eat when you are running a marathon
+  author: Felienne Hermans
