--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -37,4 +37,8 @@
   title: I ❤️ Microscopes
   abstract: Seeing the world through a new (40x) lens
   author: Hillel Wayne
-
+- date: 2022-04-01
+  link: "https://www.felienne.com/archives/6639"
+  title: Marathon food
+  abstract: I will give you tips to eat while running, and also talk about different marathon foods I have tried, and what I like or dislike about them
+  author: Felienne Hermans
