--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2022-04-01
+  link: "https://chelseatroy.com/2022/04/01/coffee-and-me-a-seven-year-love-affair/"
+  title: Coffee and Me: A Seven Year Love Affair
+  abstract: All my hottest takes on hot (and cold) coffee
+  author: Chelsea Troy
+- date: 2022-04-01
   link: "https://bellmar.medium.com/yes-you-can-charge-more-5fce1e5f657d"
   title: You Should Charge More
   abstract: How to use social graphs to price different types of freelance services
