--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
 - date: 2022-04-01
   link: "https://chelseatroy.com/2022/04/01/coffee-and-me-a-seven-year-love-affair/"
-  title: Coffee and Me: A Seven Year Love Affair
+  title: "Coffee and Me: A Seven Year Love Affair"
   abstract: All my hottest takes on hot (and cold) coffee
   author: Chelsea Troy
 - date: 2022-04-01
