--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -47,3 +47,8 @@
   title: Marathon food
   abstract: I will give you tips to eat while running, and also talk about different marathon foods I have tried, and what I like or dislike about them
   author: Felienne Hermans
+- date: 2022-04-05
+  link: "https://hilton.org.uk/blog/renaissance-polyphony-tempo"
+  title: The right tempo for renaissance polyphony
+  abstract: How fast to sing sixteenth century church music
+  author: Peter Hilton
