Update Predrag's post link to new blog

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -28,9 +28,9 @@
   abstract: What science, art, and humor have to say about what error is and how it should make you feel
   author: Ben Brubaker
 - date: 2022-04-01
-  link: "https://medium.com/@predrag.gruevski/to-ace-exams-get-better-at-the-easy-questions-2b879c4b413b"
+  link: "https://predr.ag/blog/to-ace-exams-get-better-at-the-easy-questions/"
   title: To ace exams, practice the easy questions
-  abstract: Common advice is for common situations. Acing an exam isn't common, so common advice won't get you there. Here's a technique that can
+  abstract: Most tests are tests of speed, not tests of knowledge. Improve your speed to improve your results!
   author: Predrag Gruevski
 - date: 2022-04-01
   link: "https://jeremykun.com/2022/04/01/cocktails"
