Add 2023 post ‘Simple chicken rice’

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -52,3 +52,8 @@
   title: The right tempo for renaissance polyphony
   abstract: How fast to sing sixteenth century church music
   author: Peter Hilton
+- date: 2023-04-01
+  link: "https://hilton.org.uk/blog/chicken-rice"
+  title: Simple chicken rice
+  abstract: Cutting corners to make quick single-portion Hainanese chicken rice
+  author: Peter Hilton
