--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,6 @@
+- date: 2023-04-01
+  link: "https://www.hillelwayne.com/post/weird-things-you-can-buy/"
+  title: "Ten weird things you can buy online (and why you would)"
 - date: 2022-04-01
   link: "https://chelseatroy.com/2022/04/01/coffee-and-me-a-seven-year-love-affair/"
   title: "Coffee and Me: A Seven Year Love Affair"
