--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -62,3 +62,8 @@
   title: "Ten weird things you can buy online (and why you would)"
   abstract: Have you ever seen those lists of weird things you can buy online? It’s always just novelties and gag gifts. I’m much more interested in the weird things with a legitimate use case.
   author: Hillel Wayne
+- date: 2023-04-01
+  link: "https://predr.ag/blog/mediocrity-can-be-a-sign-of-excellence/"
+  title: "Mediocrity can be a sign of excellence"
+  abstract: Three vignettes on finding and hiring great people by playing Moneyball
+  author: Predrag Gruevski
