add Jeremy Kun's 2023 April Cool's article

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- date: 2023-04-01
+  link: "https://jeremykun.com/2023/04/01/were-knot-friends/"
+  title: "We're Knot Friends"
+  abstract: The communal activity of making friendship bracelets, revisited in my thirties.
+  author: Jeremy Kun
 - date: 2022-04-01
   link: "https://chelseatroy.com/2022/04/01/coffee-and-me-a-seven-year-love-affair/"
   title: "Coffee and Me: A Seven Year Love Affair"
