--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -67,3 +67,8 @@
   title: "Mediocrity can be a sign of excellence"
   abstract: Three vignettes on finding and hiring great people by playing Moneyball
   author: Predrag Gruevski
+- date: 2023-04-01
+  link: "ttto.cafe/tofu"
+  title: "100 Incredible Tofu Recipes"
+  abstract: Media gives you listicles. Like a disease
+  author: ttto
