add Joe Cecil's 2023 April Cool's article

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2023-04-01
+  link: "https://joe-cecil.com/whats-in-a-username/"
+  title: "What's in a username?"
+  abstract: Why did you call yourself spigo900, of all things?
+  author: Joe Cecil
+- date: 2023-04-01
   link: "https://jeremykun.com/2023/04/01/were-knot-friends/"
   title: "We're Knot Friends"
   abstract: The communal activity of making friendship bracelets, revisited in my thirties.
