group projects by year

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,7 +6,7 @@
 - date: 2023-04-01
   link: "https://jeremykun.com/2023/04/01/were-knot-friends/"
   title: "We're Knot Friends"
-  abstract: The communal activity of making friendship bracelets, revisited in my thirties.
+  abstract: The communal activity of making friendship bracelets, revisited in my thirties
   author: Jeremy Kun
 - date: 2023-04-01
   link: "https://hilton.org.uk/blog/chicken-rice"
@@ -16,7 +16,7 @@
 - date: 2023-04-01
   link: "https://www.hillelwayne.com/post/weird-things-you-can-buy/"
   title: "Ten weird things you can buy online (and why you would)"
-  abstract: Have you ever seen those lists of weird things you can buy online? It’s always just novelties and gag gifts. I’m much more interested in the weird things with a legitimate use case.
+  abstract: Have you ever seen those lists of weird things you can buy online? It’s always just novelties and gag gifts. I’m much more interested in the weird things with a legitimate use case
   author: Hillel Wayne
 - date: 2023-04-01
   link: "https://predr.ag/blog/mediocrity-can-be-a-sign-of-excellence/"
