--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- date: 2024-04-01
+  link: "https://blog.wificidr.net/posts/tbd/"
+  title: "TBD"
+  abstract: Becoming an EMS volunteer in middle age.
+  author: Daniel Justice
 - date: 2023-04-01
   link: "https://ttto.cafe/tofu"
   title: "100 Incredible Tofu Recipes"
