Add Peter Hilton’s 2024 April Cool’s article

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- date: 2024-04-01
+  link: "https://hilton.org.uk/blog/rehearsal-location"
+  title: Choir rehearsal score locations
+  abstract: How to avoid wasting time telling singers where to start
+  author: Peter Hilton
 - date: 2023-04-01
   link: "https://ttto.cafe/tofu"
   title: "100 Incredible Tofu Recipes"
