--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- date: 2024-04-01
+  link: "https://predr.ag/blog/wifi-only-works-when-its-raining/"
+  title: "The WiFi only works when it's raining"
+  abstract: "The strangest hardware problem I've ever had to debug."
+  author: Predrag Gruevski
 - date: 2023-04-01
   link: "https://ttto.cafe/tofu"
   title: "100 Incredible Tofu Recipes"
