--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- date: 2024-04-01
+  link: "https://www.hillelwayne.com/post/tale-of-daniel/"
+  title: "The Tale of Daniel"
+  abstract: "Is 'Daniel' the oldest name still popular today?"
+  author: Hillel Wayne
 - date: 2023-04-01
   link: "https://ttto.cafe/tofu"
   title: "100 Incredible Tofu Recipes"
