feat: add Amogh's post

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -23,6 +23,11 @@
   title: "The WiFi only works when it's raining"
   abstract: "The strangest hardware problem I've ever had to debug."
   author: Predrag Gruevski
+- date: 2024-04-01
+  link: https://kat.bio/blog/a-new-hope
+  title: "A New Hope"
+  abstract: "A letter to and about the things that made me what I am."
+  author: Amogh Lele
 - date: 2023-04-01
   link: "https://ttto.cafe/tofu"
   title: "100 Incredible Tofu Recipes"
