Add Nicole's project

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2024-04-01
+  link: "https://ntietz.com/blog/decaf-is-good-actually/"
+  title: "Decaf is good, actually"
+  abstract: "Decaf has a bad reputation. How did it get this reputation, and should it still?"
+  author: Nicole Tietz-Sokolskaya
+- date: 2024-04-01
   link: "https://lars.hupel.info/articles/gardening/"
   title: "How I became a gardener"
   abstract: About one and a half years ago, we moved to a place with a decently-sized garden. Initially confused about whether to do anything with it, let alone what to do with it, I somehow ended up slowly becoming a gardener. Despite my total and utter cluelessness, now we have raised beds.
