--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2024-04-01
+  link: https://bytes.zone/posts/kratky-in-the-basement/
+  title: "Kratky in the basement"
+  abstract: "I've been curious about hydroponic gardening for a long time, and over the winter I managed to raise my first successful crop of lettuce!"
+  author: Brian Hicks
+- date: 2024-04-01
   link: "https://lars.hupel.info/articles/gardening/"
   title: "How I became a gardener"
   abstract: About one and a half years ago, we moved to a place with a decently-sized garden. Initially confused about whether to do anything with it, let alone what to do with it, I somehow ended up slowly becoming a gardener. Despite my total and utter cluelessness, now we have raised beds.
