--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2024-04-01
+  link: "https://ekaitz.elenq.tech/takeru.html"
+  title: "Takerufuji made history"
+  abstract: "This March we witnessed history of sumo. What Takerufuji did what seemed impossible."
+  author: Ekaitz Zarraga
+- date: 2024-04-01
   link: "https://schmidhuberj.de/2024/04/01/books-games-movies.html"
   title: "Books, Games and Movies"
   abstract: "I love books, games and movies. So I thought why not show off some of my favorites?"
