--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2024-04-01
+  link: "https://blog.rmhogervorst.nl/blog/2024/04/01/adaptive-plasticity-and-life-history-theory/"
+  title: "Adaptive Plasticity and Life History Theory"
+  abstract: "When life puts you in a specific groove, it is hard to get to another groove."
+  author: Roel M. Hogervorst
+- date: 2024-04-01
   link: "https://ekaitz.elenq.tech/takeru.html"
   title: "Takerufuji made history"
   abstract: "This March we witnessed history of sumo. What Takerufuji did what seemed impossible."
