--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2024-04-01
+  link: "https://www.jeremykun.com/2024/04/01/unusual-tips-for-parenting-toddlers/"
+  title: "Unusual Tips for Parenting Toddlers"
+  abstract: "Things I've tried with my three-year-old that worked."
+  author: Jeremy Kun
+- date: 2024-04-01
   link: "https://blog.rmhogervorst.nl/blog/2024/04/01/adaptive-plasticity-and-life-history-theory/"
   title: "Adaptive Plasticity and Life History Theory"
   abstract: "When life puts you in a specific groove, it is hard to get to another groove."
