Add Vivian Qu's post

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2024-04-01
+  link: "https://vivqu.com/blog/2024/04/01/creami/"
+  title: "Can it Creami?"
+  abstract: "The history and design of the ultimate ice cream machine"
+  author: Vivian Qu
+- date: 2024-04-01
   link: "https://www.jeremykun.com/2024/04/01/unusual-tips-for-parenting-toddlers/"
   title: "Unusual Tips for Parenting Toddlers"
   abstract: "Things I've tried with my three-year-old that worked."
