add danso's post

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2024-04-01
+  link: "https://danso.ca/blog/saga-of-nat/"
+  title: "the saga of Nat"
+  abstract: "The saga of Nat, the non-binary ninja"
+  author: danso
+- date: 2024-04-01
   link: "https://vivqu.com/blog/2024/04/01/creami/"
   title: "Can it Creami?"
   abstract: "The history and design of the ultimate ice cream machine"
