Add Harsh Shandilya's 2024 post

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -29,6 +29,11 @@
   abstract: "I've been curious about hydroponic gardening for a long time, and over the winter I managed to raise my first successful crop of lettuce!"
   author: Brian Hicks
 - date: 2024-04-01
+  link: https://msfjarvis.dev/posts/a-tour-of-my-screenshots-folder/
+  title: "A tour of my screenshots folder"
+  abstract: "I've collected Minecraft screenshots for 5 years and it's time they did something other than sit on my hard drive"
+  author: Harsh Shandilya
+- date: 2024-04-01
   link: "https://ntietz.com/blog/decaf-is-good-actually/"
   title: "Decaf is good, actually"
   abstract: "Decaf has a bad reputation. How did it get this reputation, and should it still?"
