Add Ersei's post about skateboarding

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -34,6 +34,11 @@
   abstract: "I've collected Minecraft screenshots for 5 years and it's time they did something other than sit on my hard drive"
   author: Harsh Shandilya
 - date: 2024-04-01
+  link: https://ersei.net/en/blog/sk8r
+  title: "Yeah, I Skate(board)"
+  abstract: "I skateboard, so that automatically makes me cool, right? Right??"
+  author: Ersei Saggi
+- date: 2024-04-01
   link: "https://ntietz.com/blog/decaf-is-good-actually/"
   title: "Decaf is good, actually"
   abstract: "Decaf has a bad reputation. How did it get this reputation, and should it still?"
