--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2024-04-01
+  link: "https://jvns.ca/blog/2024/04/01/making-crochet-cacti/"
+  title: "Making crochet cacti"
+  abstract: "Some notes on learning to crochet tiny cacti."
+  author: Julia Evans
+- date: 2024-04-01
   link: "https://danso.ca/blog/saga-of-nat/"
   title: "the saga of Nat"
   abstract: "The saga of Nat, the non-binary ninja"
