--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2024-04-01
+  link: https://davi.sh/blog/2024/04/dune/
+  title: "The Spice Didn't Always Flow"
+  abstract: "Personal headcannon of the origin and discovery of Spice in Dune"
+  author: Davis Haupt
+- date: 2024-04-01
   link: "https://jvns.ca/blog/2024/04/01/making-crochet-cacti/"
   title: "Making crochet cacti"
   abstract: "Some notes on learning to crochet tiny cacti."
