--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- date: 2025-04-01
+  link: "https://open.substack.com/pub/uxmichaelco/p/dries-van-noten-in-five-looks"
+  title: Dries van Noten in Five Looks
+  abstract: Interpreting the work of my favourite fashion designer in five looks
+  author: Michael Kibedi
 - date: 2024-04-01
   link: https://davi.sh/blog/2024/04/dune/
   title: "The Spice Didn't Always Flow"
