Add clementd’s post about coffee brewing

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- date: 2025-04-01
+  link: https://blog.clement.delafargue.name/posts/2025-04-01-my-coffee-workflow.html
+  title: "My coffee setup"
+  abstract: "A summary of how I brew coffee at home"
+  author: Clément Delafargue
 - date: 2024-04-01
   link: https://davi.sh/blog/2024/04/dune/
   title: "The Spice Didn't Always Flow"
