Add My Adidas by James Thomas

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- date: 2025-04-01
+  link: https://qahiccupps.blogspot.com/2025/04/my-adidas.html
+  title: "My Adidas"
+  abstract: "A reflection on how I came to buy a pair of Superstars every year for the last 20 years."
+  author: James Thomas
 - date: 2024-04-01
   link: https://davi.sh/blog/2024/04/dune/
   title: "The Spice Didn't Always Flow"
