Add Sadman Hossain's post 'Find joy in the boring bits of life'

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: https://sadman.ca/posts/find-joy-in-the-boring-bits-of-life/
+  title: "Find joy in the boring bits of life"
+  abstract: "Embrace whimsy in your everyday."
+  author: Sadman Hossain
+- date: 2025-04-01
   link: https://qahiccupps.blogspot.com/2025/04/my-adidas.html
   title: "My Adidas"
   abstract: "A reflection on how I came to buy a pair of Superstars every year for the last 20 years."
