--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: https://vivqu.com/blog/2025/04/01/paris-of-dreams/
+  title: "The Paris of our dreams"
+  abstract: "Miyazaki, Shinkai, and pushing through dreams to reality"
+  author: Vivian Qu
+- date: 2025-04-01
   link: https://sadman.ca/posts/find-joy-in-the-boring-bits-of-life/
   title: "Find joy in the boring bits of life"
   abstract: "Embrace whimsy in your everyday."
