--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: https://predr.ag/blog/xorry-not-sorry-most-amusing-security-flaws-ive-discovered/
+  title: "XORry Not Sorry: The Most Amusing Security Flaws I've Discovered"
+  abstract: "Building your own cryptographic protocols, and why you probably shouldn't."
+  author: Predrag Gruevski
+- date: 2025-04-01
   link: https://vivqu.com/blog/2025/04/01/paris-of-dreams/
   title: "The Paris of our dreams"
   abstract: "Miyazaki, Shinkai, and pushing through dreams to reality"
