Add "Leveraging Spaced Repetition to Power My Weekly Newsletter"

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: "https://news.alvaroduran.com/p/leveraging-spaced-repetition-to-power"
+  title: "Leveraging Spaced Repetition to Power My Weekly Newsletter"
+  abstract: "How I use Anki in an unconventional way to generate ideas and learn more intensely"
+  author: Alvaro Duran
+- date: 2025-04-01
   link: "https://www.hillelwayne.com/post/vidja-games/"
   title: "Gamer Games for Non-Gamers"
   abstract: "The best videogames to try if you haven't played games before."
