--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,6 +4,11 @@
   abstract: "How I use Anki in an unconventional way to generate ideas and learn more intensely"
   author: Alvaro Duran
 - date: 2025-04-01
+  link: "https://msfjarvis.dev/posts/overengineering-an-obsidian-dashboard-to-get-better-at-marvel-snap/"
+  title: "Overengineering an Obsidian dashboard to get better at Marvel Snap"
+  abstract: "Using data to answer the ultimate gamer question - why am I so bad?"
+  author: Harsh Shandilya
+- date: 2025-04-01
   link: "https://www.hillelwayne.com/post/vidja-games/"
   title: "Gamer Games for Non-Gamers"
   abstract: "The best videogames to try if you haven't played games before."
