Add Leonora Tindall's 2025 post "nimi sin"

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: "https://nora.codes/post/nimi-sin/"
+  title: "nimi sin"
+  abstract: "I'm asking you to make more words. New words. Strange words. Specific words."
+  author: Leonora Tindall
+- date: 2025-04-01
   link: "https://news.alvaroduran.com/p/leveraging-spaced-repetition-to-power"
   title: "Leveraging Spaced Repetition to Power My Weekly Newsletter"
   abstract: "How I use Anki in an unconventional way to generate ideas and learn more intensely"
