Add Yash Garg's 2025 post

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: "https://yashgarg.dev/posts/impulse-purchases/"
+  title: "Impulse Purchases"
+  abstract: "Read about some questionable financial decisions I’ve made recently."
+  author: Yash Garg
+- date: 2025-04-01
   link: "https://news.alvaroduran.com/p/leveraging-spaced-repetition-to-power"
   title: "Leveraging Spaced Repetition to Power My Weekly Newsletter"
   abstract: "How I use Anki in an unconventional way to generate ideas and learn more intensely"
