Add "Dynamic Graphs"
Add my blog post entry for 2025.

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: "https://schmidhuberj.de/2025/04/01/dynamic-graphs.html"
+  title: "Dynamic Graphs"
+  abstract: "A beginner-friendly introduction to an advanced topic in theoretical computer science."
+  author: Schmiddi
+- date: 2025-04-01
   link: "https://yashgarg.dev/posts/impulse-purchases/"
   title: "Impulse Purchases"
   abstract: "Read about some questionable financial decisions I’ve made recently."
