--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: "https://natknight.xyz/how-to-run-a-table-top-roleplaying-meetup"
+  title: "How to Run a Table Top Roleplaying Meetup"
+  abstract: "Advice and suggestions for running an occasional, low-committment TTRPG game night."
+  author: "Nat Knight"
+- date: 2025-04-01
   link: "https://schmidhuberj.de/2025/04/01/dynamic-graphs.html"
   title: "Dynamic Graphs"
   abstract: "A beginner-friendly introduction to an advanced topic in theoretical computer science."
