--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: "https://blog.proton.gay/posts/capersjones.html"
+  title: "A rough review of Capers Jones' Applied Software Measurement"
+  abstract: "The book cover promises 'statistics from more than 12,000 software projects.' A friend remarked that they couldn't imagine anything less useful than that. Were they right? I dug in. "
+  author: protondonor
+- date: 2025-04-01
   link: "https://schmidhuberj.de/2025/04/01/dynamic-graphs.html"
   title: "Dynamic Graphs"
   abstract: "A beginner-friendly introduction to an advanced topic in theoretical computer science."
