--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: "https://disegnintasca.it/come-non-ho-riparato-la-lavatrice-che-si-riempiva-dacqua-da-spenta/"
+  title: "Come non ho riparato la lavatrice che si riempiva d’acqua da spenta"
+  abstract: "How I repaired a washing machine that it turned out it was not broken. (Italian 🇮🇹)"
+  author: dbjack
+- date: 2025-04-01
   link: "https://blog.proton.gay/posts/capersjones.html"
   title: "A rough review of Capers Jones' Applied Software Measurement"
   abstract: "The book cover promises 'statistics from more than 12,000 software projects.' A friend remarked that they couldn't imagine anything less useful than that. Were they right? I dug in. "
