--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,9 @@
 - date: 2025-04-01
+  link: "https://lars.hupel.info/articles/stonks/"
+  title: "What's the yield on my stonks"
+  abstract: "At some point I wondered what the actual yearly interest of my portfolio is? Let’s figure it out."
+  author: "Lars Hupel"
+- date: 2025-04-01
   link: "https://disegnintasca.it/come-non-ho-riparato-la-lavatrice-che-si-riempiva-dacqua-da-spenta/"
   title: "Come non ho riparato la lavatrice che si riempiva d’acqua da spenta"
   abstract: "How I repaired a washing machine that it turned out it was not broken. (Italian 🇮🇹)"
