--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -7,7 +7,7 @@
   link: "https://disegnintasca.it/come-non-ho-riparato-la-lavatrice-che-si-riempiva-dacqua-da-spenta/"
   title: "Come non ho riparato la lavatrice che si riempiva d’acqua da spenta"
   abstract: "How I repaired a washing machine that it turned out it was not broken. (Italian 🇮🇹)"
-  author: dbjack
+  author: "Disegni in Tasca"
 - date: 2025-04-01
   link: "https://blog.proton.gay/posts/capersjones.html"
   title: "A rough review of Capers Jones' Applied Software Measurement"
