--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -93,6 +93,11 @@
   title: "You should buy a meat slicer"
   abstract: "A video about the most important kitchen tool for hot pot and more"
   author: Bobbie Chen
+- date: 2025-04-01
+  link: https://www.iblop.net/2025/04/01/this-music-seem-to-be-in-the-air.html
+  title: "This music seems to be in the air..."
+  abstract: "A playlist for the times to come"
+  author: Josselin Auguste
 - date: 2024-04-01
   link: https://davi.sh/blog/2024/04/dune/
   title: "The Spice Didn't Always Flow"
